[project]
name = "sj_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
my-history = 'sj_args_history.cli:cmd'

[project.urls]
Homepage = "https://github.com/sooj1n/sj_argparser_history/tree/main"
Issues = "https://github.com/sooj1n/sj_argparser_history/tree/main/issues"
